# resume_optimizer_crew_v2

./: .cache_ggshield  .env  .gitignore  11.txt  README.md  diagramas.py  pdfsearchtool_sugestions.md  pyproject.toml  requirements.txt  validate_latex_reader.py
.github/: copilot-instructions.md  copilot-isntructions-pt.md
.github/istrucoes_para_copilot/: agentes_busca_dinamica_instructions.md  api_instagram_instructions.md  copilot-instructions-generic.md  copilot_instructions.md  instructions1.md  update_instructions.md
.github/istrucoes_para_copilot/auxilioCrew/: update_crewai_docs.py
.github/istrucoes_para_copilot/auxilioCrew/docs/: copilot_instructions.md
Organizar/: composio.py  run_crew_wrapper.py  update_copilot_docs.py  update_crewai_docs.py
auxilioCrew/docs/: instrucoes_crewai.md  uv_instructions.md
cvMatcher/matchcv/: README.md  setup.py
cvMatcher/matchcv/src/matchcv/: crew.py  main.py
db/: chroma.sqlite3
diagramas/: d1.md  d2.md
docs/: como_criar_tools_crewai.md
input/: curriculo.tex
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/db/: chroma.sqlite3
src/resume_optimizer_crew/: crew.py  main.py  pyproject.toml
src/resume_optimizer_crew/config/: agents.yaml
src/resume_optimizer_crew/tools/: latex_reader.py  scraping_tool.py
src/tools/: latex_reader.py
tests/: test_latex_reader.py
